deploy.yml
kind: Service
apiVersion: v1
metadata:
  name: luke-grantham-cb-workshop-org
  labels:
    net.beedemo.deploy.type: workshop
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: luke-grantham-cb-workshop-org
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: luke-grantham-cb-workshop-org-staging
  labels:
    net.beedemo.deploy.type: workshop
spec:
  replicas: 1
  template:
    metadata:
      name: luke-grantham-cb-workshop-org
      labels:
        net.beedemo.deploy.type: workshop
        app: luke-grantham-cb-workshop-org
        env: staging
    spec:
      serviceAccountName: cjoc
      containers:
      - name: luke-grantham-cb-workshop-org
        image: gcr.io/core-workshop/helloworld-nodejs:luke-grantham-cb-workshop-org-2
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
        imagePullPolicy: Always
        ports:
        - name: public
          containerPort: 8080
      securityContext:
        runAsUser: 1000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: luke-grantham-cb-workshop-org
  labels:
    net.beedemo.deploy.type: workshop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /luke-grantham-cb-workshop-org/?(.*)
        backend:
          serviceName: luke-grantham-cb-workshop-org
          servicePort: 80
    host: staging.cb-sa.io
